# design-kit

./: README.md  RELEASE.md  design-driven.md  install.sh  pyproject.toml
.claude-plugin/: plugin.json
.github/: pull_request_template.md
.github/workflows/: manual-release.yml  release.yml
commands/: dd-integration-tasks.md  dd-plan.md  dd-replan-after-research.md  dd-research-tasks.md  dd-status.md  integration-tasks.md  plan.md  replan-after-research.md  research-tasks.md  status.md
examples/: README.md
scripts/: auto-connect-design.sh  list-tasks.sh  show-task.sh  show-tasks
src/specify_cli/: __init__.py
templates/: linear-binding.md
templates/commands/: norm-integrate.md  norm-plan.md  norm-replan.md  norm-research.md  norm-status.md  norm-task.md  norm-tasks.md
