[project]
name = "design-kit"
version = "0.1.0"
description = "Test-driven, parallel-execution framework for building complex systems with Claude AI"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx",
    "platformdirs",
    "readchar",
]

[project.scripts]
design-kit = "specify_cli:main"

[project.urls]
Homepage = "https://github.com/Piotr1215/design-kit"
Documentation = "https://github.com/Piotr1215/design-kit/blob/main/design-driven.md"
Repository = "https://github.com/Piotr1215/design-kit"
Issues = "https://github.com/Piotr1215/design-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]